update pages with {% load media %} tag

--- a/bookings/templates/home.html
+++ b/bookings/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load media %}
 
 {% block title %}Chop Africa Restaurant - Authentic African Cuisine{% endblock %}
 
