--- a/bookings/templates/home.html
+++ b/bookings/templates/home.html
@@ -61,7 +61,7 @@
         <div class="row g-4 mt-3">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}menu_images/jollof.jpg" class="card-img-top" alt="Jollof Rice" style="height: 300px; object-fit: cover;">
+                    <img src="/media/menu_images/jollof.jpg" class="card-img-top" alt="Jollof Rice" style="height: 300px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Jollof Rice</h5>
                         <p class="card-text">A flavorful rice dish cooked with tomatoes, peppers, and aromatic spices, popular across West Africa.</p>
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}menu_images/fufu_and_egussi.jpg" class="card-img-top" alt="Fufu with Egusi Soup" style="height: 300px; object-fit: cover;">
+                    <img src="/media/menu_images/fufu_and_egussi.jpg" class="card-img-top" alt="Fufu with Egusi Soup" style="height: 300px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Fufu with Egusi Soup</h5>
                         <p class="card-text">Smooth pounded yam served with rich melon seed soup cooked with vegetables and your choice of protein.</p>
