Fix image rendering and URL issues in menu and hero section in css

--- a/bookings/templates/menu/menu_list.html
+++ b/bookings/templates/menu/menu_list.html
@@ -16,7 +16,7 @@
                         {% if item.image %}
                             <img src="{{ item.image.url }}" class="img-fluid rounded-start h-100" style="object-fit: cover;" alt="{{ item.name }}">
                         {% else %}
-                            <img src="{% static 'images/placeholder.jpg' %}" class="img-fluid rounded-start h-100" style="object-fit: cover;" alt="Placeholder">
+                            <img src="{% static 'menu_images/place_holder.jpg' %}" class="img-fluid rounded-start h-100" style="object-fit: cover;" alt="Placeholder">
                         {% endif %}
                     </div>
                     <div class="col-md-8">
