--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,8 +58,8 @@
             margin-top: auto;
         }
 
-        .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/media/menu_images/hero.jpg');
+        .hero-section{
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/static/menu_images/hero.jpg');
             background-size: cover;
             background-position: center;
             color: white;
